--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Styles for the body */
 body {
     font-family: Arial, sans-serif;
-    background-image: url(TXT/TXTCYSM.jpg);
+    background-image: url(TXTCYSM.jpg);
     width: 100%;
     background-position: center;
     background-size: cover;
